# todo-backend

./: .env  Dockerfile  pyproject.toml
.github/workflows/: build-and-push.yml
app/: main.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/shared/: models.py  router.py  schemas.py  utils.py
app/todo/: crud.py  endpoints.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: ce091447c9bd_initial_migration.py
